# web_radar_test

./: Cargo.toml
src/: main.rs  state.rs  updater.rs  ws_handler.rs
static/: index.html
