[package]
name = "web_radar_test"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.26"
pretty_env_logger = "0.5.0"
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["fs"] }
rand = "0.9.0"
futures = "0.3.31"
anyhow = "1.0.96"
